2012-06-29 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinytab.el (tinyyab-mode): Do not bind C-c C-m.
	message-mode uses key prefix for PGP commands.

2012-05-14 Mon  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-mail-mode-debian-address-bug-toggle):
	With prefix-arg, set initial input to bug number for editing.

2012-05-14 Tue  Jari Aalto  <jari.aalto@cante.net>

	* other/folding.el (folding-shift-in): Correct
	`folding-narrow-by-default' at the end to enabel shift-in
	effect. Thanks to PD Priyadarshan <peedsmail@gmail.com>
	for bug reported and debugging. Fix implemented as in
	<https://gist.github.com/1571162> by doitian (Ian Yang)
	<me@iany.me>.

2012-04-22 Sun  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-type-its): New.

2012-04-20 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-nbr-string): Impove.

2012-04-19 Thu  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el Add more calls to
	`tinydebian-trim-blanks' while reading package name.

2012-04-18 Wed  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-install-in-buffers): Check
	`doit' variable.
	(tinydebian-bug-browse-url-by-package-name): Add
	`tinydebian-trim-blanks'.
	(tinydebian--bug-report-generic-bts-mail-history-last): New.
	(tinydebian-bug-report-generic-bts-mail): Add
	`tinydebian--bug-report-generic-bts-mail-history-last'.
	(tinydebian-bug-report-debian-bts-mail): Check error better.

2012-04-10 Tue  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian--removal-keyword-list):
	Correct typo.

2012-03-06 Tue  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-generic-email-control): Add
	Bug number check.
	(tinydebian-bug-gnu-bts-re-search-email): Add URL check.

2012-03-02 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinysearch.el: (tinysearch--word-boundary-set):
	Update documentation.